log
Thu 09 May 2024 04:01:35 PM UTC: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
8db15e7
Thu 09 May 2024 04:05:45 PM UTC: 
 treemap.c | 45 ++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 44 insertions(+), 1 deletion(-)
 tests:  6|6
total_score: 15/70
dba3572
Thu 09 May 2024 04:10:34 PM UTC: 
 treemap.c | 20 ++++++++++++++++++--
 1 file changed, 18 insertions(+), 2 deletions(-)
 tests:  13|5
total_score: 25/70
b23fcd0
Thu 09 May 2024 04:13:30 PM UTC: 
 treemap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  15|4
total_score: 25/70
08c1650
Thu 09 May 2024 04:19:10 PM UTC: 
 treemap.c | 63 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 61 insertions(+), 2 deletions(-)
 tests:  0|0
25d7261
Thu 09 May 2024 04:22:13 PM UTC: 
 treemap.c | 61 +------------------------------------------------------------
 1 file changed, 1 insertion(+), 60 deletions(-)
 tests:  15|4
total_score: 25/70
767dab8
Thu 09 May 2024 04:26:06 PM UTC: 
 treemap.c | 28 ++++++++++++++++++++++++++--
 1 file changed, 26 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:168:1: error: control reaches end of non-void function [-Werror=return-type]
  168 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a996491
Thu 09 May 2024 04:26:15 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c:168:1: error: expected identifier or ‘(’ before ‘}’ token
  168 | }
      | ^
treemap.c: In function ‘upperBound’:
treemap.c:167:1: error: control reaches end of non-void function [-Werror=return-type]
  167 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
831ac00
Thu 09 May 2024 04:26:32 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:167:1: error: control reaches end of non-void function [-Werror=return-type]
  167 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
21943e5
Thu 09 May 2024 04:26:51 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  19|3
total_score: 35/70
e92e2fd
Thu 09 May 2024 04:31:16 PM UTC: 
 treemap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c:179:1: error: expected identifier or ‘(’ before ‘}’ token
  179 | }
      | ^
Compilation failed
83d02b2
Thu 09 May 2024 04:31:40 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  21|2
total_score: 40/70
d8976db
Thu 09 May 2024 04:33:11 PM UTC: 
 treemap.c | 13 +++++--------
 1 file changed, 5 insertions(+), 8 deletions(-)
 tests:  21|2
total_score: 40/70
2638742
Sat 11 May 2024 10:26:33 PM UTC: 
 treemap.c | 78 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 76 insertions(+), 2 deletions(-)
 tests:  0|0
5567ba5
Sat 11 May 2024 10:27:20 PM UTC: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  0|0
3596fc9
Sat 11 May 2024 10:29:40 PM UTC: 
 treemap.c | 90 +++++++++++++--------------------------------------------------
 1 file changed, 18 insertions(+), 72 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:127:29: error: called object ‘minimum’ is not a function or function pointer
  127 |         TreeNode* minimum = minimum(node->right);
      |                             ^~~~~~~
treemap.c:127:19: note: declared here
  127 |         TreeNode* minimum = minimum(node->right);
      |                   ^~~~~~~
treemap.c:128:13: error: ‘TreeNode’ has no member named ‘key’
  128 |         node->key = minimum->key;
      |             ^~
treemap.c:128:28: error: ‘TreeNode’ has no member named ‘key’
  128 |         node->key = minimum->key;
      |                            ^~
treemap.c:129:13: error: ‘TreeNode’ has no member named ‘value’
  129 |         node->value = minimum->value;
      |             ^~
treemap.c:129:30: error: ‘TreeNode’ has no member named ‘value’
  129 |         node->value = minimum->value;
      |                              ^~
treemap.c: At top level:
treemap.c:133:1: error: expected identifier or ‘(’ before ‘}’ token
  133 | }
      | ^
Compilation failed
af3dc91
Sat 11 May 2024 10:32:53 PM UTC: 
 treemap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:126:29: error: called object ‘minimum’ is not a function or function pointer
  126 |         TreeNode* minimum = minimum(node->right);
      |                             ^~~~~~~
treemap.c:126:19: note: declared here
  126 |         TreeNode* minimum = minimum(node->right);
      |                   ^~~~~~~
treemap.c:127:13: error: ‘TreeNode’ has no member named ‘key’
  127 |         node->key = minimum->key;
      |             ^~
treemap.c:127:28: error: ‘TreeNode’ has no member named ‘key’
  127 |         node->key = minimum->key;
      |                            ^~
treemap.c:128:13: error: ‘TreeNode’ has no member named ‘value’
  128 |         node->value = minimum->value;
      |             ^~
treemap.c:128:30: error: ‘TreeNode’ has no member named ‘value’
  128 |         node->value = minimum->value;
      |                              ^~
treemap.c: At top level:
treemap.c:132:1: error: expected identifier or ‘(’ before ‘}’ token
  132 | }
      | ^
Compilation failed
b24a644
Sat 11 May 2024 10:34:04 PM UTC: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:127:13: error: ‘TreeNode’ has no member named ‘key’
  127 |         node->key = minimumNodo->key;
      |             ^~
treemap.c:127:32: error: ‘TreeNode’ has no member named ‘key’
  127 |         node->key = minimumNodo->key;
      |                                ^~
treemap.c:128:13: error: ‘TreeNode’ has no member named ‘value’
  128 |         node->value = minimumNodo->value;
      |             ^~
treemap.c:128:34: error: ‘TreeNode’ has no member named ‘value’
  128 |         node->value = minimumNodo->value;
      |                                  ^~
treemap.c: At top level:
treemap.c:132:1: error: expected identifier or ‘(’ before ‘}’ token
  132 | }
      | ^
Compilation failed
dd5d426
Sat 11 May 2024 10:37:04 PM UTC: 
 treemap.c | 28 ----------------------------
 1 file changed, 28 deletions(-)
 tests:  21|2
total_score: 40/70
ea29ab1
Sat 11 May 2024 10:39:57 PM UTC: 
 treemap.c | 30 ++++++++++++++++++++++++++++++
 1 file changed, 30 insertions(+)
 tests:  26|1
total_score: 55/70
6ba1ce1
Sat 11 May 2024 10:44:39 PM UTC: 
 treemap.c | 29 +++++++++++++++++++++++++++++
 1 file changed, 29 insertions(+)
 tests:  29|0
total_score: 70/70
285b600
